--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,19 @@ body{
     box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.50);
 }
 
+#logo{
+    font-size: 1.5rem;
+    color: var(--primary-color);
+}
+
 #header .container{
     width: 90%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto;
 }
+
 .logo-content{
     display: flex;
     align-items: center;
@@ -57,11 +62,6 @@ body{
     color: #fff;
 }
 
-#logo{
-    font-size: 1.5rem;
-    color: var(--primary-color);
-}
-
 #navbar ul{
     display: flex;
     flex-direction: row;
@@ -70,7 +70,7 @@ body{
 }
 #navbar ul li a{
     font-weight: 400;
-    color: #888;
+    color: #bbb;
     text-decoration: none;
     font-weight: bold;
     transition: .5s;
@@ -78,10 +78,6 @@ body{
 #navbar ul li a:hover{
     color: var(--primary-color);
     transition: .5s;
-}
-
-#navbar ul li a.selected{
-    color: var(--primary-color);
 }
 
 #presentation{
@@ -98,7 +94,7 @@ body{
     align-items: center;
     justify-content: space-between;
     width: 70%;
-    padding-top: 75px;
+    padding-top: 40px;
 }
 
 main{
@@ -112,6 +108,7 @@ main{
 
 section {
     width: 100%;
+    scroll-margin-top: 64px;
 }
 
 .presentation-content{
@@ -158,6 +155,7 @@ section {
 }
 
 .presentation-bts{
+    display: inline-block;
     margin-top: 10px;
     width: 50px;
     height: 50px;
@@ -172,7 +170,7 @@ section {
     height: 45px;
     font-size: 32px;
     text-align: center;
-    line-height: 45px;
+    line-height: 46px;
     opacity: 0.7;
     transition: .5s;
 }
@@ -328,7 +326,7 @@ main section:nth-child(odd), footer{
     margin-top: 10px;
 }
 
-.card-btns button{
+.card-btns a{
     width: 100px;
     height: 30px;
     font-family: "Satoshi";
@@ -340,6 +338,15 @@ main section:nth-child(odd), footer{
     background-color: var(--primary-color);
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
     cursor: pointer;
+    opacity: 0.8;
+    transition: .5s;
+    text-align: center;
+    line-height: 30px;
+    text-decoration: none;
+}
+.card-btns a:hover{
+    opacity: 1;
+    transition: .5s;
 }
 
 .project-card:hover{
