--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body{
     background-color: rgba(18, 18, 24, 0.9);
     padding: 20px;
     position: fixed;
-    z-index: 999;
+    z-index: 990;
     opacity: 0.95;
     box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.50);
 }
@@ -80,6 +80,63 @@ body{
     transition: .5s;
 }
 
+#menu-toggle{
+    color: #bbb;
+    cursor: pointer;
+    transition: .5s;
+}
+#menu-toggle.open{
+    transform: rotate(-90deg);
+}
+
+#side-menu{
+    position: fixed;
+    top: 0;
+    right: -250px;
+    width: 250px;
+    height: 100%;
+    background-color: var(--bg-primary-3);
+    transition: .5s;
+    z-index: 999;
+    padding-top: 20px;
+    transition: .5s;
+}
+
+#side-menu ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#side-menu ul li{
+    margin: 20px 0;
+    padding: 0 20px;
+    text-align: center;
+    font-weight:500;
+}
+
+#side-menu ul li a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.5rem;
+    transition: .5s;
+}
+
+#side-menu ul li a:hover{
+    color: var(--primary-color);
+    transition: .5s;
+}
+
+#side-menu.open{
+    right: 0;
+}
+
+
 #presentation{
     position: relative;
     width: 100%;
@@ -117,11 +174,11 @@ section {
     flex: 2 1 50%;
 }
 .presentation-content h1{ /* Nome */
-    font-size: 3.5rem;
+    font-size: 3vw;
     color: var(--primary-color);
 }
 .presentation-content h2{
-    font-size: 2rem;
+    font-size: 2vw;
     font-weight: normal;
 }
 #title-changer{
@@ -393,4 +450,19 @@ footer{
     padding: 20px;
     text-align: center;
     color: #aaa;
+}
+
+/* 1440, 1024, 768, 500 */
+
+@media (min-width: 1921px) {
+    .about-cards, .tec-list, .projects-cards{
+        justify-content: center;
+        gap: 50px;
+    }
+    .tec-list{
+        gap: 62px;
+    }
+    .projects-cards{
+        gap: 80px;
+    }
 }
