--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
+/* Fonts --------------------------------------------*/
 @font-face {
     font-family: "Satoshi";
     src: url(fonts/Satoshi-Variable.ttf);
 }
 
+/* Variables ----------------------------------------*/
 :root{
     --primary-color: #7562e0;
     --secondary-color: #282162;
@@ -11,6 +13,7 @@
     --bg-primary-3: #31313f;
 }
 
+/* Resets */
 *{
     margin: 0;
     padding: 0;
@@ -25,6 +28,7 @@ body{
     background-color: var(--bg-primary-2);
 }
 
+/* Header + Side Menu -------------------------------*/
 #header{
     width: 100%;
     background-color: rgba(18, 18, 24, 0.9);
@@ -141,50 +145,38 @@ body{
     right: 0;
 }
 
-
+/* Presentation Section ------------------------------------*/
 #presentation{
     position: relative;
     width: 100%;
     display: flex;
     justify-content: center;
-    padding-top: 70px;
-    padding-bottom: 70px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 #presentation .container{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 70%;
+    width: 80%;
     padding-top: 40px;
-}
-
-main{
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding-top: 10px;
-}
-
-section {
-    width: 100%;
-    scroll-margin-top: 64px;
 }
 
 .presentation-content{
     padding: 0px 30px;
     flex: 2 1 50%;
 }
-.presentation-content h1{ /* Nome */
+.presentation-content h1{
     font-size: 3vw;
     color: var(--primary-color);
 }
+
 .presentation-content h2{
     font-size: 2vw;
     font-weight: normal;
 }
+
 #title-changer{
     font-weight: bold;
 }
@@ -197,16 +189,18 @@ section {
     position: relative;
 }
 
+.presentation-photo img,.ellipse{
+    width: 22vw;
+    height: 22vw;
+}
+
 .presentation-photo img{
-    width: 350px;
-    height: 350px;
     object-fit: cover;
     object-position: center top;
     border-radius: 50%;
 }
+
 .ellipse{
-    width: 350px;
-    height: 350px;
     border-radius: 50%;
     background: linear-gradient(-135deg, var(--secondary-color), transparent);
     position: absolute; 
@@ -226,6 +220,7 @@ section {
     background-color: transparent;
     transition: .5s;
 }
+
 .presentation-bts i{
     width: 45px;
     height: 45px;
@@ -241,6 +236,7 @@ section {
     transition: .5s;
     cursor: pointer;
 }
+
 .presentation-bts:hover{
     border: 2px solid rgba(117, 98, 224);
     transition: .5s;
@@ -250,23 +246,40 @@ section {
     margin-right: 10px;
 }
 
+/* Main Config */
+
+main{
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 10px;
+}
+
+
+section {
+    width: 100%;
+    scroll-margin-top: 64px;
+}
+
 main section:nth-child(odd), footer{
     background-color: var(--bg-primary)
 }
 
 .container{
-    width: 65%;
+    width: 80%;
     margin: 30px auto;
 }
 
 .section-title{
     font-weight: normal;
-    font-size: 2em;
+    font-size: 1.9vw;
     color: var(--primary-color);
 }
 
 .about-text{
-    font-size: 1.2em;
+    font-size: 1.3vw;
     text-align: justify;
 }
 
@@ -278,8 +291,8 @@ main section:nth-child(odd), footer{
 }
 
 .about-cards .card{
-    width: 275px;
-    height: 275px;
+    width: 19vw;
+    height: 19vw;
     background-color: var(--primary-color);
     border-radius: 20px;
     padding: 20px;
@@ -288,13 +301,13 @@ main section:nth-child(odd), footer{
     justify-content: space-between;
 }
 .about-cards .card i{
-    font-size: 2.5em;
+    font-size: 3vw;
 }
 
 .about-cards .card p{
     font-weight: 500;
     text-align: end;
-    font-size: 1.7em;
+    font-size: 1.8vw;
 }
 
 .tecnologies-lists-container, .projects-cards{
@@ -307,13 +320,14 @@ main section:nth-child(odd), footer{
     justify-content: space-between;
     margin-bottom: 20px;
 }
+
 .tec-list:last-child, .projects-cards:last-child{
     margin-bottom: 0;
 }
 
 .card-tec{
-    width: 200px;
-    height: 200px;
+    width: 15vw;
+    height: 15vw;
     border: 2px solid var(--secondary-color);
     display: flex;
     flex-direction: column;
@@ -324,21 +338,27 @@ main section:nth-child(odd), footer{
     transition: .5s;
 }
 .card-tec:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
     transition: .5s;
     border-color: var(--primary-color);
 }
 
 .tec-list i{
-    font-size: 3rem;
+    font-size: 4vw;
 }
+
 .tec-list h1{
-    font-size: 2rem;
+    font-size: 2.5vw;
     color: var(--primary-color);
 }
 .tec-list p{
-    font-size: 1.2rem;
+    font-size: 1.6vw;
     color: #aaa;
+}
+
+.tec-list img{
+    width: 4vw;
+    height: 4vw;
 }
 
 #csharp-logo{
@@ -346,8 +366,8 @@ main section:nth-child(odd), footer{
 }
 
 .project-card{
-    width: 360px;
-    height: 240px;
+    width: 33%;
+    height: 15vw;
     border-radius: 20px;
     border: 2px solid var(--primary-color);
     overflow: hidden;
@@ -367,7 +387,7 @@ main section:nth-child(odd), footer{
 
 .project-card .card-desc{
     width: 100%;
-    height: 100px;
+    height: 50%;
     background-color: rgba(24, 24, 36, 0.7);
     position: relative;
     z-index: 1;
@@ -378,6 +398,7 @@ main section:nth-child(odd), footer{
 }
 
 .card-desc h2{
+    font-size: 1.5vw;
     text-align: center;
 }
 
@@ -388,13 +409,13 @@ main section:nth-child(odd), footer{
 }
 
 .card-btns a{
-    width: 100px;
-    height: 30px;
+    width: 90px;
+    height: 25px;
     font-family: "Satoshi";
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1em;
     color: #fff;
-    border-radius: 20px;
+    border-radius: 50px;
     border: none;
     background-color: var(--primary-color);
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
@@ -402,7 +423,7 @@ main section:nth-child(odd), footer{
     opacity: 0.8;
     transition: .5s;
     text-align: center;
-    line-height: 30px;
+    line-height: 25px;
     text-decoration: none;
 }
 .card-btns a:hover{
@@ -421,7 +442,7 @@ main section:nth-child(odd), footer{
 }
 
 .project-card:hover .card-desc {
-    bottom: 100px;
+    bottom: 40%;
     transition: .4s;
 }
 
@@ -458,7 +479,6 @@ footer{
 
 /* Media Queries */
 
-/*≥992px ≥1200px*/
 @media (max-width: 576px) {
     .container{
         width: 90%;
@@ -718,7 +738,6 @@ footer{
     }
 }
 
-
 @media (min-width: 769px) and (max-width: 992px){
     .container{
         width: 90%;
@@ -735,12 +754,6 @@ footer{
     }
     .logo-content h1{
         font-size: 2.2vw;
-    }
-    .on-mobile{
-        display: none;
-    }
-    .on-pc{
-        display: block;
     }
     #menu-toggle:hover{
         color: #bbb;
@@ -846,4 +859,82 @@ footer{
         font-size: 1.5em;
         text-align: center;
     }
+}
+
+@media (min-width: 993px) and (max-width: 1200px){
+    .container{
+        width: 90%;
+    }
+    #presentation .container{
+        width: 85%;
+        gap: 20px;
+    }
+    .presentation-photo img, .ellipse{
+        width: 280px;
+        height: 280px;
+    }
+    .presentation-content h1{
+        font-size: 2.5em;
+    }
+    .presentation-content h2{
+        font-size: 1.7em;
+    }
+    .section-title{
+        font-size: 1.5em;
+    }
+    .about-text {
+        font-size: 1.2em;
+    }
+    .about-cards .card {
+        width: 22vw;
+        height: 22vw;
+        padding: 15px;
+        border-radius: 20px;
+    }
+    .about-cards .card i {
+        font-size: 4vw;
+    }
+    .about-cards .card p {
+        font-size: 2.2vw;
+    }
+    .card-tec {
+        width: 17vw;
+        height: 17vw;
+        padding: 5px;
+        border-radius: 20px;
+    }
+    .tec-list i {
+        font-size: 5vw;
+    }
+    .tec-list img{
+        width: 5vw;
+        height: 5vw;
+    }
+    #i-csharp-logo{
+        margin-bottom: -10px;
+    }
+    .tec-list h1 {
+        font-size: 2.5vw;
+    }
+    .tec-list p {
+        font-size: 1.8vw;
+        display: block;
+    }
+    .projects-cards {
+        gap: 10px;
+    }
+    .project-card {
+        width: 33%;
+        height: 200px;
+    }
+    .card-desc h2 {
+        font-size: 2vw;
+    }
+    .project-card .card-desc {
+        height: 85px;
+    }
+    .project-card:hover .card-desc {
+        bottom: 85px;
+    }
+
 }
